optimed search and added toastify

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
 }
+
+.dishes-layout {
+  @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 p-10 max-w-[100rem] mx-auto;
+}
