--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,8 @@
 .dishes-layout {
   @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 p-10 max-w-[100rem] mx-auto;
 }
+@media screen {
+  .print-only {
+    display: none !important;
+  }
+}
